# TareasZoomcampMario

./: .gitignore  Readme.md
.devcontainer/: devcontainer.json
tarea_1/: docker-compose.yaml  pyproject.toml  queries.ipynb  queries.sql  respuestas.md  upload-data.ipynb
